Terminación del header y del footer

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="">
-            <div class="debug texto-menu lista-opciones">
+            <div class="texto-menu lista-opciones">
                 <div class="texto-oscuro">
                     <span>Ingresa tu Domicilio</span>
                 </div>
@@ -76,12 +76,27 @@
         
     </main>
     <footer>
-        <span>Trabaja con nosotros</span>
-        <span>Términos y condiciones</span>
-        <span>Cómo cuidamos tu privacidad</span>
-        <span>Accesibilidad</span>
-        <span>Ayuda / PQR</span>
-        <span>www.sic gov co</span>
+        <div class=" footer-container">
+            <div>
+                <div class="texto-encabezado cabeza-footer">
+                    <span>Trabaja con nosotros</span>
+                    <span>Términos y condiciones</span>
+                    <span>Cómo cuidamos tu privacidad</span>
+                    <span>Accesibilidad</span>
+                    <span>Ayuda / PQR</span>
+                    <span>www.sic gov co</span>
+                </div>
+                <div class="texto-legal info-legal">
+                    <span>Copyright © 1999-2023 MercadoLibre Colombia LTDA.</span>
+                    <span>Carrera 17 Numero 93 - 09 Piso 3, Bogotá D.C., Colombia</span>
+                </div>
+            </div>
+            <div class="imagenes-footer">
+                <img src="/media/sic.png.png"/>
+                <img src="/media/pum.png.png" />
+            </div>
+        </div>
+        
     </footer>  
 </body>
 </html>
