Primer avance al cuadro de medios de pago

--- a/index.html
+++ b/index.html
@@ -48,7 +48,26 @@
     <main>
         <img href="/media/D_NQ_964867-MLA53990832632_022023-OO.webp.png"/>
         <section>
-            <span>Hasta 48 cuotas</span>
+            <div class=" debug">
+                <div class="cuadro-medios-pago texto-medios-pago">
+                    <div class=" medio-pago debug">
+                        <span>Hasta 48 cuotas</span>
+                        <span>Ver más</span>
+                    </div>
+                    <div class="debug medio-pago">
+                        <span>Transferencia desde tu banco</span>
+                        <span>Ver más</span>
+                    </div>
+                    <div class="debug medio-pago">
+                        <span>Paga en efectivo</span>
+                        <span>Ver más</span>
+                    </div>
+                    <div class="debug medio-pago">
+                        <span>Más medios de pago</span>
+                        <span>Ver más</span>
+                    </div>
+                </div>             
+            </div>
         </section>
         <section>
             <span>Ofertas</span>
