Anexo de las tarjetas de beneficios con plataforma

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             
         </section>
         <section>
-            <div class=" debug suscribe-section">
+            <div class=" suscribe-section">
                 <div class="suscribe-header">
                     <div class="titulo-suscribe">
                         <span>Suscríbete al nivel 6</span>
@@ -235,16 +235,16 @@
                     <div class="descripcion-subscribe">
                         <span>Consigue los mejores beneficios en Mercado Libre</span>
                     </div> 
-                    <div class="debug suscribe-container">
-                        <div class="debug">
+                    <div class="suscribe-container">
+                        <div>
                             <img src="/media/dplus.svg.png"/>
                             <span>Disney+ sin cargo</span>
                         </div>
-                        <div class="debug">
+                        <div>
                             <img src="/media/starplus.svg.png"/>
                             <span>Star+ sin cargo</span>
                         </div>
-                        <div class="debug"> 
+                        <div> 
                             <img src="/media/truck.png"/>
                             <span>Envios gratis y rápidos desde $90.000 y 40% OFF en envíos de menos de $90.000</span>
                         </div>
@@ -257,8 +257,40 @@
                 </div>
             </div>
         </section>
-        <section>
-            <span>Beneficios de MercadoPuntos</span>
+        <section class="beneficios-content">
+            <div class="beneficios-title ">
+                <span>Beneficios de Mercado Puntos</span>
+                <span class="color-ver-mas texto-medios-pago">Ver todos los beneficios</span>
+            </div>
+            <div class="beneficios-container text-beneficios">
+                <div class="card-beneficio fondo-disney">
+                    <div class="debug">
+                        <img src="/media/comboplus-square.jpg.png" />
+                    </div>
+                    <div class="debug">
+                        <span>Sin cargo con el nivel 6</span>
+                        <span class="alternative-text-beneficios">Disney+ y Star+</span>
+                    </div>
+                </div>
+                <div class="card-beneficio fondo-hbo">
+                    <div>
+                        <img src="/media/logoSquare@2x.png.png"/>
+                    </div>
+                    <div>
+                        <span>Hasta 50% off</span>
+                        <span class="alternative-text-beneficios">HBO Max</span>
+                    </div>
+                </div>
+                <div class="card-beneficio fondo-paramount">
+                    <div>
+                        <img src="/media/paramount-logo-vdp-56-x-56-filled@2x.png.png"/>
+                    </div>
+                    <div>
+                        <span>Hasta 50% off</span>
+                        <span class="alternative-text-beneficios">Paramount+</span>
+                    </div>
+                </div>
+            </div>
         </section>
         <section>
             Descubre
