Sección Descubre completa

--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
             </div>
             
         </section>
-        <section>
-            <div class=" suscribe-section">
+        <section class=" suscribe-section">
+            <div>
                 <div class="suscribe-header">
                     <div class="titulo-suscribe">
                         <span>Suscríbete al nivel 6</span>
@@ -258,16 +258,16 @@
             </div>
         </section>
         <section class="beneficios-content">
-            <div class="beneficios-title ">
+            <div class="titulo-ofertas">
                 <span>Beneficios de Mercado Puntos</span>
                 <span class="color-ver-mas texto-medios-pago">Ver todos los beneficios</span>
             </div>
             <div class="beneficios-container text-beneficios">
                 <div class="card-beneficio fondo-disney">
-                    <div class="debug">
+                    <div class="">
                         <img src="/media/comboplus-square.jpg.png" />
                     </div>
-                    <div class="debug">
+                    <div class="">
                         <span>Sin cargo con el nivel 6</span>
                         <span class="alternative-text-beneficios">Disney+ y Star+</span>
                     </div>
@@ -292,8 +292,33 @@
                 </div>
             </div>
         </section>
-        <section>
-            Descubre
+        <section class="descrubre-section">
+            <div class="titulo-ofertas">
+                <spa>Descubre</spa>
+            </div>
+            <div class="">
+                <div class="descubre-container">
+                    <div class="tarjeta-muebles">
+                        <div>
+                            <span class="encabezado-descubre">RENUEVA TUS ESPACIOS</span>
+                            <span class="titulo-descubre">HOGAR Y MUEBLES</span>
+                            <span class="otro-titulo"> HASTA 50% OFF</span>
+                            <button>Ver más</button>
+                        </div>
+                        <img src="/media/promo_muebles.png"/>
+                    </div>
+                    <div class="tarjeta-muebles">
+                        <div>
+                            <span class="encabezado-descubre">SUSCRIBETE AL NIVEL 6</span>
+                            <span class="titulo-descubre">POR SOLO</span>
+                            <span class="otro-titulo">$17.899 CADA MES</span>
+                            <button>Suscribirme</button>
+                        </div>   
+                        <img src="/media/combo-sub.png"/>
+                    </div>
+                </div>
+                
+            </div>
         </section>
         <section>
             Las mejores tiendas esperan
