Adelanto de seccion colecciones y mejores tiendas

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 <span class="color-ver-mas texto-medios-pago">Ver todos los beneficios</span>
             </div>
             <div class="beneficios-container text-beneficios">
-                <div class="card-beneficio fondo-disney">
+                <div class="alineado card-beneficio fondo-disney">
                     <div class="">
                         <img src="/media/comboplus-square.jpg.png" />
                     </div>
@@ -272,7 +272,7 @@
                         <span class="alternative-text-beneficios">Disney+ y Star+</span>
                     </div>
                 </div>
-                <div class="card-beneficio fondo-hbo">
+                <div class="alineado card-beneficio fondo-hbo">
                     <div>
                         <img src="/media/logoSquare@2x.png.png"/>
                     </div>
@@ -281,7 +281,7 @@
                         <span class="alternative-text-beneficios">HBO Max</span>
                     </div>
                 </div>
-                <div class="card-beneficio fondo-paramount">
+                <div class="alineado card-beneficio fondo-paramount">
                     <div>
                         <img src="/media/paramount-logo-vdp-56-x-56-filled@2x.png.png"/>
                     </div>
@@ -292,7 +292,7 @@
                 </div>
             </div>
         </section>
-        <section class="descrubre-section">
+        <section class="descubre-section">
             <div class="titulo-ofertas">
                 <spa>Descubre</spa>
             </div>
@@ -320,8 +320,137 @@
                 
             </div>
         </section>
+        <section class="descubre-section">
+            <div class="titulo-ofertas">
+                <span>Las mejores tiendas esperan</span>
+                <span class="color-ver-mas texto-medios-pago">Ver tiendas</span>
+            </div>
+            <div>
+                <div class="tiendas-container">
+                    <div class="tarjeta-tiendas elementos-tarjeta-tienda">
+                        <div class="banner-tiendas">
+                            <img src="/media/lego.png"/>
+                            <img src="/media/logo_lego.png"/>
+                        </div>
+                        <div class="nombre-tienda">
+                            <span>LEGO</span>
+                        </div>
+                        <div class="imagenes-productos">
+                            <div class="borde-imagenes">
+                                <img src="/media/moto-lego.png"/>
+                            </div>
+                            <div class="borde-imagenes">
+                                <img src="/media/robot-lego.png"/>
+                            </div>  
+                            <div class="borde-imagenes">
+                                <img src="/media/carro-lego.png"/>
+                            </div>
+                        </div>
+                        <div class="ver-tienda">
+                            Ver tienda
+                        </div>
+                    </div>
+                    <div class="tarjeta-tiendas elementos-tarjeta-tienda">
+                        <div>
+                            <img src="/media/xiaomi.png"/>
+                        </div>
+                        <div>
+                            <img src="/media/logo-xiaomi.png"/>
+                        </div>
+                        <div class="nombre-tienda">
+                            <span>XIAOMI</span>
+                        </div>
+                        <div class="imagenes-productos">
+                            <div class="borde-imagenes">
+                                <img src="/media/reloj.png"/>
+                            </div>
+                            <div class="borde-imagenes">
+                                <img src="/media/mono-patin-delado.png"/>
+                            </div>
+                            <div class="borde-imagenes">
+                                <img src="/media/mono-patin.png"/>
+                            </div>
+                        </div>
+                        <div class="ver-tienda">
+                            Ver tienda
+                        </div>
+                    </div>
+                    <div class="tarjeta-tiendas">
+                        <div class="debug">
+                            imagen banner
+                        </div>
+                        <div class="logo-tiendas">
+                            <img src="/media/logo_oster.png"/>
+                        </div>
+                        <div class="nombre-tienda">
+                            <span>OSTER</span>
+                        </div>
+                        <div class="imagenes-productos">
+                            <div class="borde-imagenes">
+                                <img src="/media/base-olla.png"/>
+                            </div>
+                            <div class="borde-imagenes">
+                                <img src="/media/licuadora.png"/>
+                            </div>
+                            <div class="borde-imagenes">
+                                <img src="/media/arrocera.png"/>
+                            </div>
+                        </div>
+                        <div class="ver-tienda">
+                            Ver tienda
+                        </div>
+                    </div>
+                    <div class="tarjeta-tiendas">
+                        <div class="debug">
+                            imagen banner
+                        </div>
+                        <div class="">
+                            <img src="/media/logo-nikon.png"/>
+                        </div>
+                        <div class="nombre-tienda">
+                            <span>NIKON</span>
+                        </div>
+                        <div class="imagenes-productos">
+                            <div class="borde-imagenes">
+                                <img src="/media/cables.png"/>
+                            </div>
+                            <div class="borde-imagenes">
+                                <img src="/media/usb.png"/>
+                            </div>
+                            <div class="borde-imagenes">
+                                <img src="/media/camara.png"/>
+                            </div>
+                        </div>
+                        <div class="ver-tienda">
+                            Ver tienda
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section>
-            Las mejores tiendas esperan
+            <span>COLECCIONES:</span>
+            <span>Supermercado</span>
+            <span>Flecha abajo</span>
+            <div class="debug">
+                <div class="debug">
+                    <span>Supermercado</span>
+                </div>
+                <div>
+                    <div class="debug">
+                        <span>card1</span>
+                        <span>card2</span>
+                        <span>card3</span>
+                        <span>card4</span>
+                    </div>
+                    <div class="debug">
+                        <span>card5</span>
+                        <span>card6</span>
+                        <span>card7</span>
+                        <span>card8</span>
+                    </div>
+                </div>
+            </div>
         </section>
         <section>
             <span>Categrorías populares</span>
