Inicio seccion de Supermercado

--- a/index.html
+++ b/index.html
@@ -432,22 +432,44 @@
             <span>COLECCIONES:</span>
             <span>Supermercado</span>
             <span>Flecha abajo</span>
-            <div class="debug">
-                <div class="debug">
-                    <span>Supermercado</span>
+            <div class="separador">
+                <div class="principal-supermercado">
+                    <div class="debug">
+                        <img src="/media/promo_mercado.png"/>
+                    </div>
+                    <div class="descubre-section">
+                        <span class="encabezado-descubre">Descubre</span>
+                        <span class="titulo-descubre">SUPERMERCADO</span>
+                    </div>
                 </div>
                 <div>
-                    <div class="debug">
-                        <span>card1</span>
-                        <span>card2</span>
-                        <span>card3</span>
-                        <span>card4</span>
+                    <div class="debug tarjetas-mercado">
+                        <div class="debug container-mercado">
+                            <span>card1</span>
+                        </div>
+                        <div class="debug container-mercado">
+                            <span>card2</span>
+                        </div>
+                        <div class=" debug container-mercado">
+                            <span>card3</span>
+                        </div>
+                        <div class="debug container-mercado">
+                            <span>card4</span>
+                        </div>
                     </div>
-                    <div class="debug">
-                        <span>card5</span>
-                        <span>card6</span>
-                        <span>card7</span>
-                        <span>card8</span>
+                    <div class="debug tarjetas-mercado">
+                        <div class="debug container-mercado">
+                            <span>card5</span>
+                        </div>
+                        <div class="debug container-mercado">
+                            <span>card6</span>
+                        </div>
+                        <div class=" debug container-mercado">
+                            <span>card7</span>
+                        </div>
+                        <div class="debug container-mercado">
+                            <span>card8</span>
+                        </div>
                     </div>
                 </div>
             </div>
