Finalizacióon seccion categorias e inicio footer

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 
     </header>
     <main>
-        <img src="/media/D_NQ_964867-MLA53990832632_022023-OO.webp.png"/>
+        <img src="/media/banner_promo.png" width="100%"/>
         <section>
             <div>
                 <div class="cuadro-medios-pago texto-medios-pago">
@@ -487,39 +487,69 @@
                 </div>
             </div>
         </section>
-        <section class="debug">
+        <section>
             <div class="titulo-ofertas">
                 <span>Categrorías populares</span>
             </div>
             <div class="populares-section">
-                <div class="populares-container debug">
+                <div class="populares-container">
                     <div class="tarjeta-categoria">
                         <img src="svg.png"/>
-                        <span class="debug">Carros, motos y otros</span>
+                        <span>Carros, motos y otros</span>
                     </div>
                     <div class="tarjeta-categoria">
-                        <img src="svg.png"/>
-                        <span class="debug">Computación</span>
+                        <img src="/media/cat_pc.png"/>
+                        <span>Computación</span>
                     </div>
                     <div class="tarjeta-categoria">
-                        <img src="svg.png"/>
-                        <span class="debug">Ropa y Accesorios</span>
+                        <img src="/media/cat_ropa.png"/>
+                        <span>Ropa y Accesorios</span>
                     </div>
                     <div class="tarjeta-categoria">
-                        <img src="svg.png"/>
-                        <span class="debug">Hogar y Muebles</span>
+                        <img src="/media/cat_muebles.png"/>
+                        <span>Hogar y Muebles</span>
                     </div>
                     <div class="tarjeta-categoria">   
-                        <img src="svg.png"/>
-                        <span class="debug">Accesorios para Vehículos</span>
+                        <img src="/media/cat_vehiculos.png"/>
+                        <span>Accesorios para Vehículos</span>
                     </div>
                     <div class="tarjeta-categoria">
-                        <img src="svg.png"/>
-                        <span class="debug">Electrodomésticos</span>
+                        <img src="/media/cat_electrodomesticos.png"/>
+                        <span>Electrodomésticos</span>
                     </div>
                     <div class="tarjeta-categoria">
-                        <img src="svg.png"/>
-                        <span class="debug">Cámaras y accesorios</span>
+                        <img src="/media/cat_camara.png"/>
+                        <span>Cámaras y accesorios</span>
+                    </div>
+                </div>
+                <div class="populares-container">
+                    <div class="tarjeta-categoria">
+                        <img src="/media/cat_celular.png"/>
+                        <span>Celulares y Teléfonos</span>
+                    </div>
+                    <div class="tarjeta-categoria">
+                        <img src="/media/cat_maquillaje.png"/>
+                        <span>Belleza y Cuidado Personal</span>
+                    </div>
+                    <div class="tarjeta-categoria">
+                        <img src="/media/cat_deportes.png"/>
+                        <span>Deportes y Fitness</span>
+                    </div>
+                    <div class="tarjeta-categoria">
+                        <img src="/media/cat_audio.png"/>
+                        <span>Electrónica, Audio y Video</span>
+                    </div>
+                    <div class="tarjeta-categoria">   
+                        <img src="/media/cat_videojuegos.png"/>
+                        <span>Consolas y Videojuegos</span>
+                    </div>
+                    <div class="tarjeta-categoria">
+                        <img src="/media/cat_juguetes.png"/>
+                        <span>Juegos y Juguetes</span>
+                    </div>
+                    <div class="tarjeta-categoria">
+                        <img src="/media/cat_herramientas.png"/>
+                        <span>Herramientas</span>
                     </div>
                 </div>
             </div>
@@ -527,6 +557,17 @@
         </section>       
     </main>
     <footer>
+        <div>
+            <div class="debug">
+
+            </div>
+            <div class="debug">
+
+            </div>
+            <div class="debug">
+
+            </div>
+        </div>
         <div class=" footer-container">
             <div>
                 <div class="texto-encabezado cabeza-footer">
