Finalización maqueta.Inicio de arreglo de detalles

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         <span>Consigue los mejores beneficios en Mercado Libre</span>
                     </div> 
                     <div class="suscribe-container">
-                        <div>
+                        <div class="opciones-subs">
                             <img src="/media/dplus.svg.png"/>
                             <span>Disney+ sin cargo</span>
                         </div>
@@ -557,15 +557,24 @@
         </section>       
     </main>
     <footer>
-        <div>
-            <div class="debug">
-
+        <div class="seccion-otra-informacion">
+            <div class="debug otra-informacion">
+                <img src="/media/payment.svg.png" style="margin-top: 75px;"/>
+                <span class="titulo-otra-informacion">Paga con tarjeta o en efectivo</span>
+                <p>Con Mercado Pago, paga en cuotas y aprovecha la comodidad de financiación que te da tu banco, o hazlo con efectivo en puntos de pago. ¡Y siempre es seguro!</p> 
+                <p style="text-align: center;color: #3483FA; margin-bottom: 91.5px; margin-top: 15px;">Cómo pagar con Mercado Pago</p>
             </div>
-            <div class="debug">
-
+            <div class="debug otra-informacion">
+                <img src="/media/shipping.svg.png" style="margin-top: 75px;"/>
+                <span class="titulo-otra-informacion">ENVIO GRATIS DESDE $90.000</span>
+                <p>Con solo estar registrado en Mercado Libre, tienes envíos gratis en miles de productos seleccionados.</p> 
+                <p style="text-align: center;color: #3483FA; margin-bottom: 91.5px;">Conoce más sobre este beneficio</p>
             </div>
-            <div class="debug">
-
+            <div class="debug otra-informacion">
+                <img src="/media/protected.svg.png" style="margin-top: 75px;"/>
+                <span class="titulo-otra-informacion">Seguridad, de principio a fin</span>
+                <p>¿No te gusta? ¡Devuélvelo! En Mercado Libre, no hay nada que no puedas hacer, porque estás siempre protegido.</p> 
+                <p style="text-align: center;color: #3483FA; margin-bottom: 91.5px;">Cómo te protegemos</p>
             </div>
         </div>
         <div class=" footer-container">
