--- a/index.html
+++ b/index.html
@@ -244,20 +244,18 @@
                             <img src="/media/dplus.svg.png"/>
                             <span>Disney+ sin cargo</span>
                         </div>
-                        <div>
+                        <div class="opciones-subs">
                             <img src="/media/starplus.svg.png"/>
                             <span>Star+ sin cargo</span>
                         </div>
-                        <div> 
+                        <div class="opciones-subs"> 
                             <img src="/media/truck.png"/>
-                            <span>Envios gratis y rápidos desde $90.000 y 40% OFF en envíos de menos de $90.000</span>
+                            <span class="texto-organizado">Envios gratis y rápidos desde $90.000 y 40% OFF en envíos de menos de $90.000</span>
                         </div>
-                        
-                        
                     </div>
                 </div>
                 <div class="suscribe-button">
-
+                    <button>Suscríbete</button>
                 </div>
             </div>
         </section>
@@ -312,7 +310,7 @@
                         <img src="/media/promo_muebles.png"/>
                     </div>
                     <div class="tarjeta-muebles">
-                        <div>
+                        <div class="alineado-texto">
                             <span class="encabezado-descubre">SUSCRIBETE AL NIVEL 6</span>
                             <span class="titulo-descubre">POR SOLO</span>
                             <span class="otro-titulo">$17.899 CADA MES</span>
