--- a/index.html
+++ b/index.html
@@ -264,28 +264,28 @@
             </div>
             <div class="beneficios-container text-beneficios">
                 <div class="alineado card-beneficio fondo-disney">
-                    <div class="">
+                    <div class="separacion-imagen">
                         <img src="/media/comboplus-square.jpg.png" />
                     </div>
-                    <div class="">
+                    <div class="separacion-texto">
                         <span>Sin cargo con el nivel 6</span>
                         <span class="alternative-text-beneficios">Disney+ y Star+</span>
                     </div>
                 </div>
                 <div class="alineado card-beneficio fondo-hbo">
-                    <div>
+                    <div class="separacion-imagen">
                         <img src="/media/logoSquare@2x.png.png"/>
                     </div>
-                    <div>
+                    <div class="separacion-texto">
                         <span>Hasta 50% off</span>
                         <span class="alternative-text-beneficios">HBO Max</span>
                     </div>
                 </div>
                 <div class="alineado card-beneficio fondo-paramount">
-                    <div>
+                    <div class="separacion-imagen">
                         <img src="/media/paramount-logo-vdp-56-x-56-filled@2x.png.png"/>
                     </div>
-                    <div>
+                    <div class="separacion-texto">
                         <span>Hasta 50% off</span>
                         <span class="alternative-text-beneficios">Paramount+</span>
                     </div>
